Fixed page writing "undefined" when no subtitle exists.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "galleryDir": "D:\\webgallery\\17WG13",
+    "galleryDir": "D:\\webgallery\\18GSAA",
     "compName": "Competition Name",
     "code": "17WG13",
     "webDir": "",
