Fixed node script not generating proper JSON for subfolders.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "galleryDir": "D:\\webgallery\\18GSAA",
+    "galleryDir": "E:\\webgallery\\17RG34",
     "compName": "Competition Name",
-    "code": "17WG13",
-    "webDir": "",
+    "code": "17RG34",
+    "webDir": "http://www.debra-anne-creations.com/galleries/",
     "imgExt": ".jpg"
 }
